# file_engine_python

./: .gitignore  DEVELOPER.md  README.md  SPECIFICATIONS.md  demo.py  pyproject.toml  requirements.txt  setup.py
fileengine/: __init__.py  client.py  exceptions.py  fileservice.proto  fileservice_pb2.py  fileservice_pb2_grpc.py
tests/: test_auth_context.py  test_dataclasses.py  test_demo.py  test_init.py  test_integration.py  test_integration_full.py  test_integration_permissions_status.py  test_managed_files.py  test_move_copy_operations.py  test_permissions_and_status.py  test_unit_models.py
